# Esp32-S3-Wifi-Utils

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPOSITION.md  INTEGRATION.md  METHODS.md  README.md  ROADMAP.md  THREAT_MODEL.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml
components/attack_lan/: CMakeLists.txt  attack_lan.c
components/attack_lan/include/: attack_lan.h
components/captive_portal/: CMakeLists.txt  captive_portal.c
components/captive_portal/include/: captive_portal.h
components/command_router/: CMakeLists.txt  command_router.c
components/command_router/include/: command_router.h
components/evil_twin/: CMakeLists.txt  evil_twin.c
components/evil_twin/include/: evil_twin.h
components/hacking_ble/: CMakeLists.txt  hacking_ble.c
components/hacking_ble/include/: hacking_ble.h
components/hacking_wifi/: CMakeLists.txt  hacking_wifi.c  wsl_bypasser.c
components/hacking_wifi/include/: hacking_wifi.h
components/persist/: CMakeLists.txt  persist.c
components/persist/include/: persist.h
components/playbook/: CMakeLists.txt  playbook.c
components/playbook/include/: playbook.h
components/protocol/: CMakeLists.txt  tlv.c
components/protocol/include/: ble_uuids.h  tlv.h
components/scan_ble/: CMakeLists.txt  scan_ble.c
components/scan_ble/include/: scan_ble.h
components/scan_wifi/: CMakeLists.txt  scan_wifi.c
components/sniff_wifi/: CMakeLists.txt  sniff_wifi.c
components/status_led/: CMakeLists.txt  status_led.c
components/transport_ble/: CMakeLists.txt  transport_ble.c
components/watchdog/: CMakeLists.txt  watchdog.c
scripts/: arp_cut_test.py  beacon_test.py  ble_spam_test.py  ble_test.py  captive_portal_test.py  deauth_test.py  defense_test.py  evil_twin_test.py  flash.sh  karma_test.py  lan_scan_test.py  monitor.sh  pcap_test.py  pmkid_capture_test.py  probe_sniff_test.py  wpa_capture_test.py  wps_pin_test.py
src/: CMakeLists.txt  main.c
test/test_tlv/: CMakeLists.txt  test_tlv.c
(+5 files in other folders)
